Update UI for 3 pages and functionality

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -7,6 +7,8 @@
     --light-blue: #CBDCEB;
     --hover-color: #7C93C3;
     --blue: #024CAA;
+    --white: #e2e8f0;
+    --bluegrey: #d0dce1;
     --font-size: 1.125rem;
 }
 
