--- a/src/components/Sidebar/style.module.scss
+++ b/src/components/Sidebar/style.module.scss
@@ -1,30 +1,32 @@
-// $white: #f1f5f9;
-// $dark-gray: #475569;
-
 .sidebar {
     width: 20vw;
-    min-width: 200px;
+    min-width: 270px;
+    height: 100vh;
     background-color: var(--secondary-color);
     color: var(--background-color);
     padding: 1.5rem;
-
-
+    
+    // Add these properties for sticky behavior
+    position: sticky;
+    top: 0;
+    left: 0;
+    overflow-y: auto;
+    max-height: 100vh;
+    
     .logo {
         display: flex;
         margin-bottom: 2rem;
 
-        img{
+        img {
             width: 4vw;
             height: 10vh;
             min-width: 30px;
         }
 
-
         .logoTitle {
             display: flex;
             justify-content: center;
             align-items: center;
-
             margin-left: 1.5rem;
             font-size: 1.5rem;
             font-weight: bold;
@@ -35,10 +37,11 @@
         margin-top: 4rem;
         color: var(--light-blue);
 
+        
+
         ul {
             list-style-type: none;
             padding: 0;
-            
 
             li {
                 padding: 1rem;
@@ -48,7 +51,6 @@
 
 
                 &:hover {
-                    //background-color: var(--grey);
                     background-color: var(--hover-color);
                 }
                 
@@ -90,3 +92,4 @@
 
     }
 }
+
